fixed image overlap and rebuild prod

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@
 	margin: 15px;
 	box-shadow: 5px 5px 25px rgba(0,0,0,.2);
 /*	max-width: 100%;*/
-	max-height: 90vh;
+/*	max-height: 90vh;*/
 /*	object-fit: scale-down;*/
 }
 .arduino-logo{
